fix color contrast in light mode

--- a/src/assets/css/global/variables.css
+++ b/src/assets/css/global/variables.css
@@ -27,7 +27,7 @@
   --color-text-accent: #505050;
   --color-bg-accent: #fdfdfd;
   --color-bg-accent-2: #f7f7f7;
-  --color-primary-glare: #ed6e35;
+  --color-primary-glare: #c83d00;
 }
 
 /* Dark theme specific variables based on system preference */
@@ -41,7 +41,7 @@
     --color-text-accent: #a8a8a8;
     --color-bg-accent: #383838;
     --color-bg-accent-2: #404040;
-    --color-primary-glare: #ec6b32;
+    --color-primary-glare: #b73d10;
   }
 }
 
@@ -75,7 +75,7 @@
       --color-bg-accent: color-mix(in oklab, var(--color-bg) 92%, var(--color-text));
       --color-bg-accent-2: color-mix(in oklab, var(--color-bg) 80%, var(--color-text));
       /* add opacity with color-mix */
-      --color-primary: color-mix(in oklab, var(--color-primary-highlight) 80%, var(--color-bg));
+      --color-primary: color-mix(in oklab, var(--color-primary-highlight) 90%, var(--color-bg));
       --color-primary-glare: color-mix(in oklab, var(--color-primary) 70%, var(--color-text));
     }
   }
@@ -85,7 +85,7 @@
     --color-bg-accent: color-mix(in oklab, var(--color-bg) 92%, var(--color-text));
     --color-bg-accent-2: color-mix(in oklab, var(--color-bg) 80%, var(--color-text));
     /* add opacity with color-mix */
-    --color-primary: color-mix(in oklab, var(--color-primary-highlight) 70%, var(--color-bg));
+    --color-primary: color-mix(in oklab, var(--color-primary-highlight) 90%, var(--color-bg));
     --color-primary-glare: color-mix(in oklab, var(--color-primary) 70%, var(--color-text));
   }
 }
